started implementing news